@@ -1,4 +1,5 @@
 1.0.1
+Added "restartwm" to messages.
 Fixes for apps using those god awful client side decorations.
 
 1.0.0
